# marshmallow_dataclass

./: .pre-commit-config.yaml  CONTRIBUTING.md  pyproject.toml
.github/workflows/: documentation.yml  python-package.yml  release.yml
